--- a/PERTEMUAN01/index.html
+++ b/PERTEMUAN01/index.html
@@ -1,9 +1,14 @@
 <html>
     <head>
         <title>Main page</title>
-        <link rel="stylesheet" type="text/css' href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <h2>Welcome to dasar web</h2>
+        <br><br>
+        <div class="kotak">kotak 1</div>
+        <div class="kotak">kotak 2</div>
+        <div class="kotak">kotak 3</div>
+        <div id="kotak">kotak 4</div>
     </body>
 </html>
