--- a/PERTEMUAN02/index.html
+++ b/PERTEMUAN02/index.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
 <html>
-
-    <head>
-        
-    </head>
+<head>
+    <title>Latihan Margin</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="satu">1</div>
+    <div class="dua">2</div>
+    <div class="tiga">3</div>
+</body>
 </html>
